[project]
name = "vrchan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.1",
    "pyotp>=2.9.0",
    "httpx>=0.27.2",
    "upstash-redis>=1.2.0",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.13.0",
    "ruff>=0.8.2",
]
